[DC] Removing fire and forget and adding net standart 1.4 support

--- a/src/HttpTracer.TestApp/Views/MainPage.xaml
+++ b/src/HttpTracer.TestApp/Views/MainPage.xaml
@@ -7,8 +7,11 @@
     <StackLayout HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand">
         <Label Text="Welcome to Xamarin Forms and Prism!" />
 
-        <Button Text="Hit me!"
+        <Button Text="Dump trace to Console!"
                 Command="{Binding ButtonClickCommand}" />
+
+        <Button Text="Dump tace to File!"
+                Command="{Binding TraceFileCommand}" />
     </StackLayout>
 
 </ContentPage>
