--- a/src/HttpTracer.TestApp/Views/MainPage.xaml
+++ b/src/HttpTracer.TestApp/Views/MainPage.xaml
@@ -21,7 +21,8 @@
                             HorizontalOptions="FillAndExpand"
                             BackgroundColor="Black">
                         <ScrollView Orientation="Horizontal">
-                                <StackLayout BindableLayout.ItemsSource="{Binding LogEntries}">
+                                <StackLayout BindableLayout.ItemsSource="{Binding LogEntries}"
+                                             Margin="10">
                                         <BindableLayout.ItemTemplate>
                                                 <DataTemplate>
                                                         <Label FormattedText="{Binding .}"
@@ -34,33 +35,6 @@
                                                 </DataTemplate>
                                         </BindableLayout.ItemTemplate>
                                 </StackLayout>
-                                <!--
-                                <Label Text="{Binding LogEntriesString}"
-                                        VerticalOptions="StartAndExpand"
-                                        HorizontalOptions="StartAndExpand"
-                                        BackgroundColor="Transparent"
-                                        TextColor="Chartreuse"
-                                        FontFamily="Courier"/>
-                                -->
-                                <!--
-                                <ListView ItemsSource="{Binding LogEntries}" 
-                                          BackgroundColor="Transparent"
-                                          SeparatorVisibility="None">
-                                        <ListView.ItemTemplate>
-                                                <DataTemplate>
-                                                        <ViewCell>
-                                                                <Label Text="{Binding .}"
-                                                                       VerticalOptions="StartAndExpand"
-                                                                       HorizontalOptions="StartAndExpand"
-                                                                       BackgroundColor="Transparent"
-                                                                       TextColor="Chartreuse"
-                                                                       LineBreakMode="NoWrap"
-                                                                       FontFamily="Courier"/>
-                                                        </ViewCell>
-                                                </DataTemplate>
-                                        </ListView.ItemTemplate>
-                                </ListView>
-                                -->
                         </ScrollView>
                 </ScrollView>
 
